Removed the EnginePage, its content will need to be set on the game project. Added the change screen size method.

--- a/WkXamarinTinyEngine/WkXamarinTinyEngine.csproj
+++ b/WkXamarinTinyEngine/WkXamarinTinyEngine.csproj
@@ -2,17 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Pages\EnginePage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
